HEM: Fix header scrollbar coverup

--- a/projects/hem-rocks/styles/logo.css
+++ b/projects/hem-rocks/styles/logo.css
@@ -1,5 +1,5 @@
 .logo {
-  margin: 0 0 0 -3px;
+  margin: 0 0 0 -2px;
   padding: 0;
   font-size: 100px;
   font-weight: normal;
